@@ -12,9 +12,6 @@
 #include <util.h>
 #include <object/structures.h>
 
-#ifdef CONFIG_KERNEL_GLOBALS_FRAME
-extern word_t armKSGlobalsFrame[BIT(ARMSmallPageBits) / sizeof(word_t)] VISIBLE;
-#endif /* CONFIG_KERNEL_GLOBALS_FRAME */
 extern asid_pool_t *armKSASIDTable[BIT(asidHighBits)] VISIBLE;
 extern asid_t armKSHWASIDTable[BIT(hwASIDBits)] VISIBLE;
 extern hw_asid_t armKSNextASID VISIBLE;
